# python_magnetrun

./: README.md  archive.sh  pyproject.toml  pyrightconfig.json  requirements.txt  start-venv.sh
.devcontainer/: Dockerfile  devcontainer.json  start-venv.sh
python_magnetrun/: MagnetRun.py  TODO.md  analysis-refactor.py  analysis.py  bilan.py  cmp_fields.py  flow_params.py  magnetdata.py  pupitre.py  python_magnetrun.py  signature.py  timeseries-anomaly-detection.py
python_magnetrun/cooling/: clawtest1.py  heatexchanger_primary.py  heatexchanger_primary_orig.py  water.py
python_magnetrun/examples/: get-record.py
python_magnetrun/processing/: correlations.py  distance.py  smoothers.py  trends.py
python_magnetrun/utils/: convert.py  duplicates.py  fit.py  hysteresis.py  plateaux.py  plots.py
tests/: notes.md  test-axvspan.py  test-breakpoint-analysis.py  test-intercept.py  test-lagcorrelation.py  test-signature.py
