[tool]
[tool.poetry]
name = "python_magnetrun"
version = "0.1.0"
description = "Python MagnetRun contains utils to view and analyse Magnet runs"
license = "MIT license"
keywords = ["python_magnetrun"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]
homepage = "https://github.com/Trophime/python_magnetrun"
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
iapws = "^1.3.4"
itertools = "^0.1.2"
lxml = "^4.9.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
numpy = "^2.2.1"
scipy = "^1.14.1"
pandas = "^2.2.1"
nptdms = "^1.7.0"
pint = "^0.17"
requests = "^2.32.3"
statsmodel = "^0.12.2"
tabulate = "^0.9.0"
natsort = "^7.1.1"
nlopt = "^2.7.0"

[tool.poetry.groups.system]
optional = true

[tool.poetry.groups.system.dependencies]
clawpack = "^5.11.0"
ht = "^0.1.55"

[tool.poetry.groups.signal]
optional = true
[tool.poetry.groups.signal.dependencies]
ruptures = "^1.0.3"
piecewise-regression = "^1.5.0"
pwlf = "^2.4.0"
pyts = "^0.13.0"
dtaidistance = "^2.3.12"
pyextremes = "^2.3.3"
# peak_detection = "https://github.com/glyg/peak_detection"
# peakutils = 1.3.3
# lmfit = 1.3.2
# pwt = 1.8.0
visidata = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tools.poetry.doc-dependencies]
sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-mermaid = "^0.0.1"
myst_parser = "^0.15.0"



